<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.wangy16.exam2bywangy16.MainActivity">

    <item
        android:id="@+id/action_choose_two"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_choose_two"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_swap"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_swap"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />


</menu>
